crates/ink/tests/ui/contract/fail/message-unknown-property.stderr
error: encountered unknown ink! attribute argument: unknown_marker
  --> tests/ui/contract/fail/message-unknown-property.rs:13:15
   |
13 |         #[ink(unknown_marker)]
   |               ^^^^^^^^^^^^^^
